[profile.release]
panic = 'unwind'

[workspace]
members = [
# 'node/*',
# 'node/testing',
	'node/aura-cli',
	'node/aura-runtime',
	'node/chain_extension',
	'node/cli',
	'node/executor',
	'node/inspect',
	'node/primitives',
	'node/rpc',
	'node/runtime',
	'pallets/*',
	'precompiles/*',
]

[patch.crates-io]
ss58-registry = { git = "https://github.com/nftt-studio/ss58-registry.git", branch = "add-nftmart-prefix-12191" }

# RustBlockchain/evm repo: https://github.com/rust-blockchain/evm/pull/63
# evm-core = { git = "https://github.com/purestake/evm", branch = "joshy-scale-info"}
# evm = { git = "https://github.com/purestake/evm", branch = "joshy-scale-info"}

# [patch."https://github.com/nftt-studio/frontier.git"]
# pallet-evm = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13" }

# RustBlockchain/ethereum repo: https://github.com/rust-blockchain/ethereum/pull/22
# ethereum = { git = "https://github.com/purestake/ethereum", branch = "joshy-scale-info" }
# ethereum = { version = "0.9.0", git = "https://github.com/purestake/ethereum", branch = "joshy-scale-info" }
# ethereum = { version = "0.9.0", git = "https://github.com/rust-blockchain/ethereum", branch = "master" }
# ethereum = { version = "0.11" }
# sp-core = { git = 'https://github.com/btwiuse/substrate.git', rev = 'ba153b9ae050eda022f002d74d76f98d1e339a81' }

