[package]
name = "nftmart-node"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "nftmart-node"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7', features = ["wasmtime"] }
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-executor = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7', features = ["wasmtime"] }
sc-service = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7', features = ["wasmtime"] }
sc-telemetry = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-keystore = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-inherents = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-consensus-aura = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-consensus-aura = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-finality-grandpa = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-finality-grandpa = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-client-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-runtime = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-std = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-rpc-api = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-blockchain = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-block-builder = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sc-basic-authorship = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
substrate-frame-rpc-system = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
pallet-transaction-payment-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
pallet-contracts-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
frame-benchmarking-cli = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }

# local dependencies
node-template-runtime = { package = "nftmart-node-runtime", version = "3.0.0", path = "../runtime" }
nftmart-traits = { path = "../pallets/nftmart-traits", default-features = false }
nftmart-rpc = { path = "../pallets/nftmart-nft/rpc" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7'}

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
